--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@alborea/auth": "0.0.40",
     "@alborea/common": "0.0.7",
     "@alborea/loopback": "0.0.7",
     "@alborea/pwa": "0.0.18",
@@ -21,14 +20,16 @@
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
-    "@angular/fire": "^5.4.2",
+    "@angular/fire": "^6.0.0",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^9.1.9",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "^9.1.9",
-    "firebase": "^7.14.2",
+    "@firebase/app": "^0.6.4",
+    "@firebase/firestore": "^1.14.6",
+    "firebase": "^7.14.6",
     "firebaseui": "^4.5.0",
     "firebaseui-angular": "^5.0.0",
     "ngx-auth-firebaseui": "^4.3.0",
